--- a/features/cerberusweb.watchers/plugin.xml
+++ b/features/cerberusweb.watchers/plugin.xml
@@ -9,10 +9,10 @@
 
 	<class_loader>
 		<file path="api/App.php">
-			<class name="DAO_WatcherMailFilter" />
-			<class name="Model_WatcherMailFilter" />
-			<class name="SearchFields_WatcherMailFilter" />
-			<class name="View_WatcherMailFilter" />
+			<class name="DAO_WatcherFilter" />
+			<class name="Model_WatcherFilter" />
+			<class name="SearchFields_WatcherFilter" />
+			<class name="View_WatcherFilter" />
 		</file>
 	</class_loader>
 	
